<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmr_tests_utils</name>
  <version>0.0.1</version>
  <description>A header only library to facilitate writing gtest unit tests for ROS2 nodes.</description>
  <maintainer email="erwin.lejeune@cm-robotics.com">ros</maintainer>
  <license>Apache License 2.0</license>
  
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_kdl</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>example_interfaces</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
